syntax = "proto3";

package com.road.yishi.proto.carnival;

message FiveCardPokerRewardMsg {
  int32 templateId = 1;
  int32 count = 2;
  int32 score = 3;
}
